Bulk insert now working!